--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                 </div>
                 <div class="flex items-center justify-center gap-2 opacity-60">
                     <span class="px-2 py-0.5 rounded-full bg-gray-200 text-[10px] font-bold text-gray-500 uppercase tracking-wide">IndexedDB</span>
-                    <span class="text-[10px] text-gray-400 font-medium">v10.5</span>
+                    <span class="text-[10px] text-gray-400 font-medium">v11.0</span>
                 </div>
             </div>
         </div>
@@ -119,12 +119,12 @@
             <div id="liver-rank-card" class="mx-2 mt-4 mb-2 p-4 bg-white rounded-2xl shadow-sm border border-gray-100 relative overflow-hidden">
                 <div class="flex justify-between items-end mb-2 relative z-10">
                     <div>
-                        <p class="text-[10px] font-bold text-gray-400 uppercase tracking-widest">LIVER RANK</p>
+                        <p class="text-[10px] font-bold text-gray-400 uppercase tracking-widest">LIVER RANK (28 DAYS)</p>
                         <h3 class="text-xl font-black mt-1" id="rank-title">Loading...</h3>
                     </div>
                     <div class="text-right">
                         <span class="text-2xl font-black text-gray-800" id="dry-count">0</span>
-                        <span class="text-xs font-bold text-gray-400">日 (累計)</span>
+                        <span class="text-xs font-bold text-gray-400">日 (直近)</span>
                     </div>
                 </div>
                 <div class="w-full bg-gray-100 rounded-full h-2 mb-1">
@@ -180,7 +180,7 @@
                 </div>
             </div>
             <div class="grid grid-cols-2 gap-4 mb-8">
-                <button onclick="toggleModal('beer-modal', true)" class="bg-white border border-gray-100 text-gray-700 font-bold py-4 rounded-2xl shadow-sm transition transform active:scale-95 flex flex-col items-center justify-center hover:bg-gray-50">
+                <button onclick="UI.openBeerModal()" class="bg-white border border-gray-100 text-gray-700 font-bold py-4 rounded-2xl shadow-sm transition transform active:scale-95 flex flex-col items-center justify-center hover:bg-gray-50">
                     <span class="text-3xl mb-1">🍺</span><span class="text-xs text-gray-400 font-bold mt-1">RECORD DEBT</span><span class="text-sm">飲酒を記録</span>
                 </button>
                 <button onclick="UI.openCheckModal()" class="bg-white border border-gray-100 text-gray-700 font-bold py-4 rounded-2xl shadow-sm transition transform active:scale-95 flex flex-col items-center justify-center hover:bg-gray-50">
@@ -238,6 +238,11 @@
                 <button onclick="toggleModal('manual-exercise-modal', false)" class="text-gray-400 hover:text-gray-600 text-2xl font-bold p-2">&times;</button>
             </div>
             <p class="text-sm text-gray-600 mb-2 font-bold" id="manual-exercise-name">運動名</p>
+            
+            <div class="mb-4">
+                <input type="date" id="manual-date" class="w-full p-3 bg-gray-50 border border-gray-200 rounded-xl focus:ring-2 focus:ring-green-500 outline-none text-gray-800 font-bold text-center">
+            </div>
+
             <div class="flex items-center mb-8">
                 <input type="number" id="manual-minutes" placeholder="30" class="w-full p-4 bg-gray-50 border border-gray-200 rounded-xl focus:ring-2 focus:ring-green-500 outline-none text-gray-800 text-center font-bold text-3xl">
                 <span class="ml-2 font-bold text-gray-500">分</span>
@@ -254,6 +259,11 @@
             </div>
             <form id="beer-form" onsubmit="event.preventDefault(); handleBeerSubmit();">
                 <div class="space-y-4 mb-6">
+                    <div>
+                        <label class="block text-xs font-bold text-gray-400 mb-1.5 uppercase tracking-wide">DATE</label>
+                        <input type="date" id="beer-date" class="w-full p-3 bg-gray-50 border border-gray-200 rounded-xl focus:ring-2 focus:ring-indigo-500 outline-none text-gray-800 font-bold">
+                    </div>
+
                     <div>
                         <div class="flex justify-between items-end mb-1.5">
                             <label class="block text-xs font-bold text-gray-400 uppercase tracking-wide">Beer Style</label>
@@ -314,12 +324,13 @@
             <p class="text-xs text-gray-400 mb-6 font-medium">コンディションと対策を振り返り</p>
             <form id="check-form" onsubmit="event.preventDefault(); handleCheckSubmit();">
                 <div class="space-y-4 mb-8">
-                    <div class="flex items-center justify-between p-2 bg-gray-50 border border-gray-200 rounded-lg">
-                        <label for="record-as-yesterday" class="text-gray-600 font-bold text-xs flex-grow cursor-pointer">📅 昨日の分として記録する</label>
-                        <input type="checkbox" id="record-as-yesterday" class="h-5 w-5 text-gray-500 rounded focus:ring-gray-400 border-gray-300">
+                    <div class="p-2 bg-gray-50 border border-gray-200 rounded-lg">
+                        <label class="block text-xs font-bold text-gray-400 mb-1 ml-1 uppercase">DATE</label>
+                        <input type="date" id="check-date" class="w-full p-2 bg-transparent border-none outline-none text-gray-700 font-bold">
                     </div>
+                    
                     <div class="flex items-center justify-between p-3.5 bg-blue-50 border border-blue-100 rounded-xl">
-                        <span class="text-blue-800 font-bold text-sm">🍵 昨日は休肝日 (飲んでいない)</span>
+                        <span class="text-blue-800 font-bold text-sm">🍵 今日は休肝日 (飲まない)</span>
                         <input type="checkbox" id="is-dry-day" class="h-6 w-6 text-blue-600 rounded focus:ring-blue-500 border-gray-300" onchange="UI.toggleDryDay(this)">
                     </div>
                     <div id="drinking-section" class="bg-indigo-50 p-4 rounded-xl border border-indigo-100 accordion-content">
@@ -330,14 +341,14 @@
                         </div>
                     </div>
                     <div class="bg-green-50 p-4 rounded-xl border border-green-100">
-                        <h4 class="text-xs font-bold text-green-600 uppercase tracking-wider mb-3">🧘 コンディション (翌日・日中)</h4>
+                        <h4 class="text-xs font-bold text-green-600 uppercase tracking-wider mb-3">🧘 コンディション (日中)</h4>
                         <div class="space-y-3">
                             <label class="flex items-center justify-between bg-white p-3 rounded-lg border border-green-100 hover:border-green-300 cursor-pointer"><span class="text-gray-700 font-bold text-sm">👖 ウエストに余裕あり</span><input type="checkbox" name="waistEase" class="h-5 w-5 text-green-600 rounded"></label>
                             <label class="flex items-center justify-between bg-white p-3 rounded-lg border border-green-100 hover:border-green-300 cursor-pointer"><span class="text-gray-700 font-bold text-sm">🦶 足が軽い・むくみなし</span><input type="checkbox" name="footLightness" class="h-5 w-5 text-green-600 rounded"></label>
                         </div>
                     </div>
                     <div class="pt-4 border-t border-gray-100">
-                         <label class="block text-xs font-bold text-gray-400 mb-1">📏 今日の体重 (任意)</label>
+                         <label class="block text-xs font-bold text-gray-400 mb-1">📏 体重 (任意)</label>
                          <div class="flex items-center gap-2">
                              <input type="number" id="check-weight" step="0.1" placeholder="測った時だけ入力" class="w-full p-3 bg-gray-50 border border-gray-200 rounded-xl focus:ring-2 focus:ring-indigo-500 outline-none text-center font-bold text-gray-700">
                              <span class="text-xs font-bold text-gray-400">kg</span>
@@ -489,7 +500,14 @@
                         </table>
                     </div>
                 </section>
-            </div>
+<section>
+                    <h4 class="text-sm font-bold text-indigo-600 mb-2">✨ 新機能: ランク制</h4>
+                    <p class="text-xs text-gray-600 leading-relaxed">
+                        **直近28日間の休肝日率**でランクが決まります（S, A, B...）。<br>
+                        過去の日付で記録を修正しても、自動的に再計算されます。
+                    </p>
+                </section>
+                </div>
             <div class="p-4 border-t border-gray-100 bg-gray-50 rounded-b-3xl">
                 <button onclick="toggleModal('help-modal', false)" class="w-full bg-gray-800 text-white font-bold py-3 rounded-xl shadow-md text-sm">閉じる</button>
             </div>
