--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 </head>
 <body class="min-h-screen text-gray-800">
 
-    <div class="app-header-bg pt-12 pb-6 px-4 rounded-b-[2rem] shadow-sm border-b border-white relative z-20">
+    <div class="app-header-bg pt-12 pb-6 px-4 rounded-b-[2rem] shadow-sm border-b border-white sticky top-0 z-50">
         <div class="container mx-auto max-w-xl relative">
             
             <button onclick="UI.openHelp()" class="absolute top-0 left-2 text-2xl hover:opacity-70 transition z-30 filter drop-shadow-sm p-2" aria-label="ヘルプ">
@@ -505,7 +505,7 @@
                 <section>
                     <h4 class="text-sm font-bold text-indigo-600 mb-2">✨ 新機能: ランク制</h4>
                     <p class="text-xs text-gray-600 leading-relaxed">
-                        **直近28日間の休肝日率**でランクが決まります（S, A, B...）。<br>
+                        直近28日間の休肝日率でランクが決まります（S, A, B...）。<br>
                         開始から28日未満のルーキー期間は、日数ではなく成功率で判定されるので、始めたばかりでも上位ランクが狙えます！
                     </p>
                 </section>
