--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
 
             <div id="quick-input-area" class="flex gap-2 mb-2 px-1"></div>
 
-            <div class="grid grid-cols-2 gap-4 mb-8">
+            <div class="grid grid-cols-2 gap-4">
                 <button onclick="UI.openBeerModal()" class="bg-white border border-gray-100 text-gray-700 font-bold py-4 rounded-2xl shadow-sm transition transform active:scale-95 flex flex-col items-center justify-center hover:bg-gray-50">
                     <span class="text-3xl mb-1">🍺</span><span class="text-xs text-gray-400 font-bold mt-1">RECORD DEBT</span><span class="text-sm">飲酒を記録</span>
                 </button>
@@ -206,7 +206,7 @@
                 </h2>
                 <div id="log-container" class="log-container max-h-80 overflow-y-auto pr-1"><div id="log-list" class="divide-y divide-gray-50"></div></div>
             </div>
-            <div class="p-6 rounded-3xl border-2 border-dashed border-gray-200 text-center mb-8">
+            <div class="p-6 rounded-3xl border-2 border-dashed border-gray-200 text-center">
                 <p class="text-[10px] text-gray-400 mb-4 font-bold tracking-widest">DATA MANAGEMENT</p>
                 <div class="flex flex-col gap-3">
                     <div class="flex justify-center space-x-3">
