--- a/index.html
+++ b/index.html
@@ -557,7 +557,26 @@
             </div>
         </div>
     </div>
+<nav class="fixed bottom-0 w-full bg-white border-t border-gray-200 pb-safe z-50">
+        <div class="container mx-auto max-w-xl flex justify-around items-center h-16 px-2">
+            
+            <button id="nav-tab-home" class="nav-item flex flex-col items-center justify-center w-full h-full text-indigo-600 active:scale-95 transition">
+                <span class="text-2xl mb-0.5">🏠</span>
+                <span class="text-[10px] font-bold">ホーム</span>
+            </button>
 
+            <button id="nav-tab-record" class="nav-item flex flex-col items-center justify-center w-full h-full text-gray-400 active:scale-95 transition">
+                <span class="text-2xl mb-0.5">⏱️</span>
+                <span class="text-[10px] font-bold">記録</span>
+            </button>
+
+            <button id="nav-tab-history" class="nav-item flex flex-col items-center justify-center w-full h-full text-gray-400 active:scale-95 transition">
+                <span class="text-2xl mb-0.5">📊</span>
+                <span class="text-[10px] font-bold">履歴</span>
+            </button>
+            
+        </div>
+    </nav>
     <script type="module" src="js/main.js"></script>
 </body>
 </html>
