--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         })();
     </script>
 
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="./style.css">
 </head>
 <body class="min-h-screen text-gray-800 dark:text-gray-100 bg-gray-50 dark:bg-gray-900 select-none overscroll-none transition-colors duration-300">
 
@@ -85,7 +85,7 @@
                 </div>
                 <div class="flex items-center justify-center gap-2 opacity-60">
                     <span class="px-2 py-0.5 rounded-full bg-gray-200 dark:bg-gray-700 text-[10px] font-bold text-gray-500 dark:text-gray-300 uppercase tracking-wide">IndexedDB</span>
-                    <span class="text-[10px] text-gray-400 font-medium">v12.6</span>
+                    <span class="text-[10px] text-gray-400 font-medium">v12.7</span>
                 </div>
             </div>
         </div>
@@ -215,7 +215,7 @@
                 
                 <div id="heatmap-wrapper" class="mb-6 bg-white dark:bg-gray-800 rounded-2xl shadow-sm border border-gray-100 dark:border-gray-700 p-4 transition-colors">
                     <h3 class="text-xs font-bold text-gray-400 uppercase tracking-wider mb-3 flex justify-between items-center">
-                        <span>Continuity (Last 90 Days)</span>
+                        <span>Continuity (Last 5 Weeks)</span>
                         <span class="text-[10px] font-normal">草を生やそう🌿</span>
                     </h3>
                     
