--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
                 
                 <div id="heatmap-wrapper" class="mb-6 bg-white dark:bg-gray-800 rounded-2xl shadow-sm border border-gray-100 dark:border-gray-700 p-4 transition-colors">
                     <h3 class="text-xs font-bold text-gray-400 uppercase tracking-wider mb-3 flex justify-between items-center">
-                        <span>Continuity (Last 90 Days)</span>
+                        <span>Continuity (Last 5 Weeks)</span>
                         <span class="text-[10px] font-normal">草を生やそう🌿</span>
                     </h3>
                     
