--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                 </div>
                 <div class="flex items-center justify-center gap-2 opacity-60">
                     <span class="px-2 py-0.5 rounded-full bg-gray-200 dark:bg-gray-700 text-[10px] font-bold text-gray-500 dark:text-gray-300 uppercase tracking-wide">IndexedDB</span>
-                    <span class="text-[10px] text-gray-400 font-medium">v12.9</span>
+                    <span class="text-[10px] text-gray-400 font-medium">v12.10</span>
                 </div>
             </div>
         </div>
@@ -676,6 +676,6 @@
             
         </div>
     </nav>
-    <script type="module" src="js/main.js"></script>
+    <script type="module" src="./main.js"></script>
 </body>
 </html>
