--- a/index.html
+++ b/index.html
@@ -567,6 +567,13 @@
                         </div>
                     </div>
                 </div>
+<div>
+                    <label class="block text-xs font-bold text-gray-400 mb-2 uppercase tracking-wide">記録設定</label>
+                    <div class="bg-white dark:bg-gray-700 p-3 rounded-xl border border-gray-200 dark:border-gray-600">
+                        <label class="block text-[10px] text-gray-500 dark:text-gray-400 mb-1 font-bold">運動記録のデフォルト</label>
+                        <select id="setting-default-record-exercise" class="w-full p-2 bg-white dark:bg-gray-800 border border-gray-200 dark:border-gray-600 rounded-lg text-sm font-bold text-gray-800 dark:text-white outline-none focus:ring-2 focus:ring-indigo-500"></select>
+                    </div>
+                </div>
                 <div>
                     <label class="block text-xs font-bold text-gray-400 mb-2 uppercase tracking-wide">換算モード設定</label>
                     <div class="grid gap-3">
