--- a/index.html
+++ b/index.html
@@ -339,6 +339,9 @@
             </div>
 
             <div class="flex gap-3">
+　　　　　　　　<button id="btn-detail-share" class="flex-1 bg-black dark:bg-white dark:text-gray-900 text-white font-bold py-3 rounded-xl hover:bg-gray-800 dark:hover:bg-gray-200 transition flex items-center justify-center gap-2">
+                    <span>🚀</span> シェア
+                </button>
                 <button id="btn-detail-edit" class="flex-1 bg-gray-100 dark:bg-gray-700 text-gray-700 dark:text-gray-300 font-bold py-3 rounded-xl hover:bg-gray-200 dark:hover:bg-gray-600 transition">編集</button>
                 <button id="btn-detail-delete" class="flex-1 bg-red-50 dark:bg-red-900/30 text-red-600 dark:text-red-400 font-bold py-3 rounded-xl hover:bg-red-100 dark:hover:bg-red-900/50 transition">削除</button>
             </div>
