--- a/index.html
+++ b/index.html
@@ -827,5 +827,6 @@
         </div>
     </nav>
     <script type="module" src="./main.js"></script>
+<script type="module" src="./test.js"></script>
 </body>
 </html>
