--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
                     <div class="flex justify-center w-full gap-3">
                         <button id="start-stepper-btn" class="flex-1 bg-green-500 hover:bg-green-600 text-white font-bold py-3.5 rounded-xl shadow-green-200 dark:shadow-none shadow-lg transition transform active:scale-95 text-lg">START</button>
                         <button id="manual-record-btn" class="flex-1 bg-white dark:bg-gray-700 border-2 border-green-500 text-green-600 dark:text-green-400 font-bold py-3.5 rounded-xl shadow-sm transition transform active:scale-95 text-lg">手入力</button>
-                        <button id="stop-stepper-btn" class="w-full bg-red-500 hover:bg-red-600 text-white font-bold py-4 rounded-xl shadow-red-200 dark:shadow-none shadow-lg transition transform active:scale-95 hidden text-lg animate-pulse">STOP & SAVE</button>
+                        <button id="stop-stepper-btn" class="flex-1 bg-red-500 hover:bg-red-600 text-white font-bold py-4 rounded-xl shadow-red-200 dark:shadow-none shadow-lg transition transform active:scale-95 hidden text-lg animate-pulse">STOP & SAVE</button>
                     </div>
                 </div>
 
